[gd_scene load_steps=10 format=3 uid="uid://j1wk761i71h3"]

[ext_resource type="Script" path="res://scenes/level/level.gd" id="1_uyyro"]
[ext_resource type="PackedScene" uid="uid://cgmsb2w2b8xoq" path="res://scenes/game/characters/character.tscn" id="2_8pj6o"]
[ext_resource type="PackedScene" uid="uid://b3oi57wa1ynk4" path="res://scenes/game/portals/portal_bullet.tscn" id="3_xgyx4"]
[ext_resource type="TileSet" uid="uid://dxrxd68302yfd" path="res://tilemaps/main.tres" id="4_qkysc"]
[ext_resource type="PackedScene" uid="uid://lbin2tgikqkk" path="res://scenes/game/enviroment/floor.tscn" id="5_04k04"]
[ext_resource type="Script" path="res://scenes/game/HealthBars.gd" id="6_gppcr"]
[ext_resource type="PackedScene" uid="uid://cnruh2ooy73v3" path="res://scenes/game/hud/healthbar/healthbar.tscn" id="7_gyues"]
[ext_resource type="PackedScene" uid="uid://b1xwxcyty6yo" path="res://scenes/game/props/prop.tscn" id="8_hagta"]
[ext_resource type="Theme" uid="uid://bpfiddf0lxbq4" path="res://assets/theme/gameTheme/themeGame.tres" id="9_luofo"]

[node name="main" type="Node2D"]
script = ExtResource("1_uyyro")
_player_scene = ExtResource("2_8pj6o")
_bullet_scene = ExtResource("3_xgyx4")

[node name="TileMap_level" type="TileMap" parent="."]
position = Vector2(1, 0)
scale = Vector2(4, 4)
tile_set = ExtResource("4_qkysc")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(65535, 131078, 2, 131071, 131078, 2, 196607, 131078, 2, 262143, 131078, 2, 327679, 131078, 2, 393215, 131078, 2, 458751, 131078, 2, 524287, 131078, 2, 589823, 131078, 2, 655359, 131078, 2, 720895, 131078, 2, 786431, 131078, 2, 851967, 131078, 2, 917503, 131078, 2, 983039, 131078, 2, 1048575, 131078, 2, 1114111, 131078, 2, 1179647, 131078, 2, 1245183, 131078, 2, 1310719, 131078, 2, 1376255, 131078, 2, 0, 131078, 2, 65536, 458758, 1, 131072, 196614, 2, 196608, 196614, 2, 262144, 196614, 2, 327680, 196614, 2, 393216, 196614, 2, 458752, 196614, 2, 524288, 196614, 2, 589824, 196614, 2, 655360, 196614, 2, 720896, 458758, 2, 786432, 131078, 2, 851968, 131078, 2, 917504, 131078, 2, 983040, 131078, 2, 1048576, 131078, 2, 1114112, 131078, 2, 1179648, 131078, 2, 1245184, 131078, 2, 1310720, 131078, 2, 1, 131078, 2, 65537, 131078, 3, 131073, 65542, 7, 196609, 65542, 8, 262145, 65542, 8, 327681, 65542, 8, 393217, 65542, 8, 458753, 65542, 8, 524289, 65542, 8, 589825, 65542, 8, 655361, 65542, 9, 720897, 131078, 1, 786433, 131078, 2, 851969, 131078, 2, 917505, 131078, 2, 983041, 131078, 2, 1048577, 131078, 2, 1114113, 131078, 2, 1179649, 131078, 2, 1245185, 131078, 2, 1310721, 131078, 2, 2, 131078, 2, 65538, 131078, 3, 131074, 131078, 7, 196610, 131078, 8, 262146, 131078, 8, 327682, 131078, 8, 393218, 131078, 8, 458754, 131078, 8, 524290, 131078, 8, 589826, 131078, 8, 655362, 131078, 9, 720898, 131078, 1, 786434, 131078, 2, 851970, 131078, 2, 917506, 131078, 2, 983042, 131078, 2, 1048578, 131078, 2, 1114114, 131078, 2, 1179650, 131078, 2, 1245186, 131078, 2, 1310722, 131078, 2, 3, 131078, 2, 65539, 131078, 3, 131075, 131078, 7, 196611, 131078, 8, 262147, 131078, 8, 327683, 131078, 8, 393219, 131078, 8, 458755, 131078, 8, 524291, 131078, 8, 589827, 131078, 8, 655363, 131078, 9, 720899, 131078, 1, 786435, 131078, 2, 851971, 131078, 2, 917507, 131078, 2, 983043, 131078, 2, 1048579, 131078, 2, 1114115, 131078, 2, 1179651, 131078, 2, 1245187, 131078, 2, 1310723, 131078, 2, 4, 131078, 2, 65540, 131078, 3, 131076, 196614, 7, 196612, 196614, 8, 262148, 196614, 8, 327684, 458758, 8, 393220, 131078, 8, 458756, 131078, 8, 524292, 131078, 8, 589828, 131078, 8, 655364, 131078, 9, 720900, 196614, 1, 786436, 196614, 2, 851972, 196614, 2, 917508, 196614, 2, 983044, 196614, 2, 1048580, 458758, 2, 1114116, 131078, 2, 1179652, 131078, 2, 1245188, 131078, 2, 1310724, 131078, 2, 5, 131078, 2, 65541, 524294, 1, 131077, 65542, 2, 196613, 65542, 2, 262149, 65542, 3, 393221, 131078, 8, 458757, 131078, 8, 524293, 131078, 8, 589829, 131078, 8, 655365, 524294, 7, 720901, 65542, 8, 786437, 65542, 8, 851973, 65542, 8, 917509, 65542, 8, 983045, 65542, 9, 1048581, 131078, 1, 1114117, 131078, 2, 1179653, 131078, 2, 1245189, 131078, 2, 1310725, 131078, 2, 6, 131078, 2, 65542, 131078, 2, 131078, 131078, 2, 196614, 131078, 2, 262150, 131078, 3, 327686, 131078, 7, 393222, 131078, 8, 458758, 131078, 8, 524294, 131078, 8, 589830, 131078, 8, 655366, 458758, 7, 720902, 196614, 8, 786438, 458758, 8, 851974, 131078, 8, 917510, 131078, 8, 983046, 131078, 9, 1048582, 131078, 1, 1114118, 131078, 2, 1179654, 131078, 2, 1245190, 131078, 2, 1310726, 131078, 2, 7, 131078, 2, 65543, 131078, 2, 131079, 131078, 2, 196615, 131078, 2, 262151, 131078, 3, 327687, 131078, 7, 393223, 131078, 8, 458759, 131078, 8, 524295, 131078, 8, 589831, 131078, 8, 655367, 131078, 9, 720903, 65542, 5, 786439, 131078, 7, 851975, 131078, 8, 917511, 131078, 8, 983047, 131078, 9, 1048583, 131078, 1, 1114119, 131078, 2, 1179655, 131078, 2, 1245191, 131078, 2, 1310727, 131078, 2, 8, 131078, 2, 65544, 458758, 1, 131080, 196614, 2, 196616, 196614, 2, 262152, 196614, 3, 327688, 131078, 7, 393224, 131078, 8, 458760, 131078, 8, 524296, 131078, 8, 589832, 131078, 8, 655368, 131078, 9, 720904, 131078, 5, 786440, 131078, 7, 851976, 131078, 8, 917512, 131078, 8, 983048, 131078, 9, 1048584, 131078, 1, 1114120, 131078, 2, 1179656, 131078, 2, 1245192, 131078, 2, 1310728, 131078, 2, 9, 131078, 2, 65545, 131078, 3, 131081, 65542, 7, 196617, 65542, 8, 262153, 65542, 8, 327689, 524294, 8, 393225, 131078, 8, 458761, 131078, 8, 524297, 131078, 8, 589833, 131078, 8, 655369, 131078, 9, 720905, 131078, 5, 786441, 131078, 7, 851977, 131078, 8, 917513, 131078, 8, 983049, 131078, 9, 1048585, 131078, 1, 1114121, 131078, 2, 1179657, 131078, 2, 1245193, 131078, 2, 1310729, 131078, 2, 10, 131078, 2, 65546, 131078, 3, 131082, 131078, 7, 196618, 131078, 8, 262154, 131078, 8, 327690, 131078, 8, 393226, 131078, 8, 458762, 131078, 8, 524298, 131078, 8, 589834, 131078, 8, 655370, 131078, 9, 720906, 131078, 5, 786442, 131078, 7, 851978, 131078, 8, 917514, 131078, 8, 983050, 131078, 9, 1048586, 131078, 1, 1114122, 131078, 2, 1179658, 131078, 2, 1245194, 131078, 2, 1310730, 131078, 2, 11, 131078, 2, 65547, 131078, 3, 131083, 131078, 7, 196619, 131078, 8, 262155, 131078, 8, 327691, 131078, 8, 393227, 131078, 8, 458763, 65542, 5, 524299, 131078, 8, 589835, 131078, 8, 655371, 131078, 9, 720907, 131078, 5, 786443, 131078, 7, 851979, 131078, 8, 917515, 131078, 8, 983051, 131078, 9, 1048587, 131078, 1, 1114123, 131078, 2, 1179659, 131078, 2, 1245195, 131078, 2, 1310731, 131078, 2, 12, 131078, 2, 65548, 131078, 3, 131084, 131078, 7, 196620, 131078, 8, 262156, 131078, 8, 327692, 131078, 8, 393228, 131078, 8, 458764, 131078, 5, 524300, 131078, 8, 589836, 131078, 8, 655372, 131078, 9, 720908, 196614, 5, 786444, 131078, 7, 851980, 131078, 8, 917516, 131078, 8, 983052, 131078, 9, 1048588, 131078, 1, 1114124, 131078, 2, 1179660, 131078, 2, 1245196, 131078, 2, 1310732, 131078, 2, 13, 131078, 2, 65549, 131078, 3, 131085, 131078, 7, 196621, 131078, 8, 262157, 131078, 8, 327693, 131078, 8, 393229, 131078, 8, 458765, 196614, 5, 524301, 131078, 8, 589837, 131078, 8, 655373, 524294, 7, 720909, 65542, 8, 786445, 524294, 8, 851981, 131078, 8, 917517, 131078, 8, 983053, 131078, 9, 1048589, 131078, 1, 1114125, 131078, 2, 1179661, 131078, 2, 1245197, 131078, 2, 1310733, 131078, 2, 14, 131078, 2, 65550, 131078, 3, 131086, 131078, 7, 196622, 131078, 8, 262158, 131078, 8, 327694, 131078, 8, 393230, 131078, 8, 458766, 65542, 8, 524302, 131078, 8, 589838, 131078, 8, 655374, 131078, 8, 720910, 131078, 8, 786446, 131078, 8, 851982, 131078, 8, 917518, 131078, 8, 983054, 131078, 9, 1048590, 131078, 1, 1114126, 131078, 2, 1179662, 131078, 2, 1245198, 131078, 2, 1310734, 131078, 2, 15, 131078, 2, 65551, 131078, 3, 131087, 131078, 7, 196623, 131078, 8, 262159, 131078, 8, 327695, 131078, 8, 393231, 131078, 8, 458767, 131078, 8, 524303, 131078, 8, 589839, 131078, 8, 655375, 131078, 8, 720911, 131078, 8, 786447, 131078, 8, 851983, 131078, 8, 917519, 131078, 8, 983055, 131078, 9, 1048591, 131078, 1, 1114127, 131078, 2, 1179663, 131078, 2, 1245199, 131078, 2, 1310735, 131078, 2, 16, 131078, 2, 65552, 131078, 3, 131088, 131078, 7, 196624, 131078, 8, 262160, 131078, 8, 327696, 131078, 8, 393232, 131078, 8, 458768, 65542, 5, 524304, 131078, 8, 589840, 131078, 8, 655376, 458758, 7, 720912, 196614, 8, 786448, 458758, 8, 851984, 131078, 8, 917520, 131078, 8, 983056, 131078, 9, 1048592, 131078, 1, 1114128, 131078, 2, 1179664, 131078, 2, 1245200, 131078, 2, 1310736, 131078, 2, 17, 131078, 2, 65553, 131078, 3, 131089, 131078, 7, 196625, 131078, 8, 262161, 131078, 8, 327697, 131078, 8, 393233, 131078, 8, 458769, 131078, 5, 524305, 131078, 8, 589841, 131078, 8, 655377, 131078, 9, 720913, 65542, 5, 786449, 131078, 7, 851985, 131078, 8, 917521, 131078, 8, 983057, 131078, 9, 1048593, 131078, 1, 1114129, 131078, 2, 1179665, 131078, 2, 1245201, 131078, 2, 1310737, 131078, 2, 18, 131078, 2, 65554, 131078, 3, 131090, 196614, 7, 196626, 196614, 8, 262162, 196614, 8, 327698, 458758, 8, 393234, 131078, 8, 458770, 196614, 5, 524306, 131078, 8, 589842, 131078, 8, 655378, 131078, 9, 720914, 131078, 5, 786450, 131078, 7, 851986, 131078, 8, 983058, 131078, 9, 1048594, 131078, 1, 1114130, 131078, 2, 1179666, 131078, 2, 1245202, 131078, 2, 1310738, 131078, 2, 19, 131078, 2, 65555, 524294, 1, 131091, 65542, 2, 196627, 65542, 2, 262163, 65542, 3, 327699, 131078, 7, 393235, 131078, 8, 458771, 65542, 8, 524307, 131078, 8, 589843, 131078, 8, 655379, 131078, 9, 720915, 131078, 5, 786451, 131078, 7, 851987, 131078, 8, 917523, 131078, 8, 983059, 131078, 9, 1048595, 131078, 1, 1114131, 131078, 2, 1179667, 131078, 2, 1245203, 131078, 2, 1310739, 131078, 2, 20, 131078, 2, 65556, 131078, 2, 131092, 131078, 2, 196628, 131078, 2, 262164, 131078, 3, 327700, 131078, 7, 393236, 131078, 8, 458772, 131078, 8, 524308, 131078, 8, 589844, 131078, 8, 655380, 131078, 9, 720916, 131078, 5, 786452, 131078, 7, 851988, 131078, 8, 917524, 131078, 8, 983060, 131078, 9, 1048596, 131078, 1, 1114132, 131078, 2, 1179668, 131078, 2, 1245204, 131078, 2, 1310740, 131078, 2, 21, 131078, 2, 65557, 131078, 2, 131093, 131078, 2, 196629, 131078, 2, 262165, 131078, 3, 327701, 131078, 7, 393237, 131078, 8, 458773, 131078, 8, 524309, 131078, 8, 589845, 131078, 8, 655381, 131078, 9, 720917, 131078, 5, 786453, 131078, 7, 851989, 131078, 8, 917525, 131078, 8, 983061, 131078, 9, 1048597, 131078, 1, 1114133, 131078, 2, 1179669, 131078, 2, 1245205, 131078, 2, 1310741, 131078, 2, 22, 131078, 2, 65558, 458758, 1, 131094, 196614, 2, 196630, 196614, 2, 262166, 196614, 3, 327702, 131078, 7, 393238, 131078, 8, 458774, 131078, 8, 524310, 131078, 8, 589846, 131078, 8, 655382, 131078, 9, 720918, 131078, 5, 786454, 131078, 7, 851990, 131078, 8, 917526, 131078, 8, 983062, 131078, 9, 1048598, 131078, 1, 1114134, 131078, 2, 1179670, 131078, 2, 1245206, 131078, 2, 1310742, 131078, 2, 23, 131078, 2, 65559, 131078, 3, 131095, 65542, 7, 196631, 65542, 8, 262167, 65542, 8, 327703, 524294, 8, 393239, 458758, 7, 524311, 458758, 8, 589847, 131078, 8, 655383, 131078, 9, 720919, 196614, 5, 786455, 131078, 7, 851991, 458758, 7, 917527, 196614, 8, 983063, 196614, 9, 1048599, 131078, 1, 1114135, 131078, 2, 1179671, 131078, 2, 1245207, 131078, 2, 1310743, 131078, 2, 24, 131078, 2, 65560, 131078, 3, 131096, 131078, 7, 196632, 131078, 8, 262168, 131078, 8, 327704, 131078, 8, 393240, 131078, 8, 458776, 65542, 5, 524312, 131078, 7, 589848, 131078, 8, 655384, 524294, 7, 720920, 65542, 8, 786456, 524294, 8, 851992, 65542, 1, 917528, 65542, 2, 983064, 65542, 2, 1048600, 524294, 2, 1114136, 131078, 2, 1179672, 131078, 2, 1245208, 131078, 2, 1310744, 131078, 2, 25, 131078, 2, 65561, 131078, 3, 131097, 131078, 7, 196633, 131078, 8, 262169, 131078, 8, 327705, 131078, 8, 393241, 131078, 9, 458777, 131078, 5, 524313, 131078, 7, 589849, 131078, 8, 655385, 131078, 8, 720921, 131078, 8, 786457, 131078, 8, 851993, 131078, 1, 917529, 131078, 2, 983065, 131078, 2, 1048601, 131078, 2, 1114137, 131078, 2, 1179673, 131078, 2, 1245209, 131078, 2, 1310745, 131078, 2, 26, 131078, 2, 65562, 131078, 3, 131098, 131078, 7, 196634, 131078, 8, 262170, 131078, 8, 327706, 131078, 8, 393242, 131078, 9, 458778, 131078, 5, 524314, 131078, 7, 589850, 131078, 8, 655386, 131078, 8, 720922, 131078, 8, 786458, 131078, 8, 851994, 131078, 1, 917530, 131078, 2, 983066, 131078, 2, 1048602, 131078, 2, 1114138, 131078, 2, 1179674, 131078, 2, 1245210, 131078, 2, 1310746, 131078, 2, 27, 131078, 2, 65563, 131078, 3, 131099, 131078, 7, 196635, 131078, 8, 262171, 131078, 8, 327707, 131078, 8, 393243, 131078, 9, 458779, 131078, 5, 524315, 131078, 7, 589851, 131078, 8, 655387, 131078, 8, 720923, 131078, 8, 786459, 131078, 8, 851995, 131078, 1, 917531, 131078, 2, 983067, 131078, 2, 1048603, 131078, 2, 1114139, 131078, 2, 1179675, 131078, 2, 1245211, 131078, 2, 1310747, 131078, 2, 28, 131078, 2, 65564, 131078, 3, 131100, 196614, 7, 196636, 196614, 8, 262172, 196614, 8, 327708, 196614, 8, 393244, 196614, 9, 458780, 131078, 5, 524316, 196614, 7, 589852, 196614, 8, 655388, 196614, 8, 720924, 196614, 8, 786460, 196614, 8, 851996, 131078, 1, 917532, 131078, 2, 983068, 131078, 2, 1048604, 131078, 2, 1114140, 131078, 2, 1179676, 131078, 2, 1245212, 131078, 2, 1310748, 131078, 2, 29, 131078, 2, 65565, 524294, 1, 131101, 65542, 2, 196637, 65542, 2, 262173, 65542, 2, 327709, 65542, 2, 393245, 65542, 2, 458781, 655366, 1, 524317, 65542, 2, 589853, 65542, 2, 655389, 65542, 2, 720925, 65542, 2, 786461, 65542, 2, 851997, 524294, 2, 917533, 131078, 2, 983069, 131078, 2, 1048605, 131078, 2, 1114141, 131078, 2, 1179677, 131078, 2, 1245213, 131078, 2, 1310749, 131078, 2, 30, 131078, 2, 65566, 131078, 2, 131102, 131078, 2, 196638, 131078, 2, 262174, 131078, 2, 327710, 131078, 2, 393246, 131078, 2, 458782, 131078, 2, 524318, 131078, 2, 589854, 131078, 2, 655390, 131078, 2, 720926, 131078, 2, 786462, 131078, 2, 851998, 131078, 2, 917534, 131078, 2, 983070, 131078, 2, 1048606, 131078, 2, 1114142, 131078, 2, 1179678, 131078, 2, 1245214, 131078, 2, 1310750, 131078, 2, 31, 131078, 2, 65567, 131078, 2, 131103, 131078, 2, 196639, 131078, 2, 262175, 131078, 2, 327711, 131078, 2, 393247, 131078, 2, 458783, 131078, 2, 524319, 131078, 2, 589855, 131078, 2, 655391, 131078, 2, 720927, 131078, 2, 786463, 131078, 2, 851999, 131078, 2, 917535, 131078, 2, 983071, 131078, 2, 1048607, 131078, 2, 1114143, 131078, 2, 1179679, 131078, 2, 1245215, 131078, 2, 1310751, 131078, 2, 327685, 131078, 7, 458775, 196614, 8, 917522, 131078, 8, 65532, 131078, 2, 131068, 131078, 2, 196604, 131078, 2, 262140, 131078, 2, 327676, 131078, 2, 393212, 131078, 2, 458748, 131078, 2, 524284, 131078, 2, 589820, 131078, 2, 655356, 131078, 2, 720892, 131078, 2, 786428, 131078, 2, 851964, 131078, 2, 917500, 131078, 2, 983036, 131078, 2, 1048572, 131078, 2, 1114108, 131078, 2, 1179644, 131078, 2, 1245180, 131078, 2, 65533, 131078, 2, 131069, 131078, 2, 196605, 131078, 2, 262141, 131078, 2, 327677, 131078, 2, 393213, 131078, 2, 458749, 131078, 2, 524285, 131078, 2, 589821, 131078, 2, 655357, 131078, 2, 720893, 131078, 2, 786429, 131078, 2, 851965, 131078, 2, 917501, 131078, 2, 983037, 131078, 2, 1048573, 131078, 2, 1114109, 131078, 2, 1179645, 131078, 2, 1245181, 131078, 2, 65534, 131078, 2, 131070, 131078, 2, 196606, 131078, 2, 262142, 131078, 2, 327678, 131078, 2, 393214, 131078, 2, 458750, 131078, 2, 524286, 131078, 2, 589822, 131078, 2, 655358, 131078, 2, 720894, 131078, 2, 786430, 131078, 2, 851966, 131078, 2, 917502, 131078, 2, 983038, 131078, 2, 1048574, 131078, 2, 1114110, 131078, 2, 1179646, 131078, 2, 1245182, 131078, 2, 1310716, 131078, 2, 1376252, 131078, 2, 1310717, 131078, 2, 1376253, 131078, 2, 1310718, 131078, 2, 1376254, 131078, 2, 32, 131078, 2, 65568, 131078, 2, 131104, 131078, 2, 196640, 131078, 2, 262176, 131078, 2, 327712, 131078, 2, 393248, 131078, 2, 458784, 131078, 2, 524320, 131078, 2, 589856, 131078, 2, 655392, 131078, 2, 720928, 131078, 2, 786464, 131078, 2, 852000, 131078, 2, 917536, 131078, 2, 983072, 131078, 2, 1048608, 131078, 2, 1114144, 131078, 2, 1179680, 131078, 2, 1245216, 131078, 2, 1310752, 131078, 2, -65537, 131078, 2, -1, 131078, 2, -131072, 131078, 2, -65536, 131078, 2, -131071, 131078, 2, -65535, 131078, 2, -131070, 131078, 2, -65534, 131078, 2, -131069, 131078, 2, -65533, 131078, 2, -131068, 131078, 2, -65532, 131078, 2, -131067, 131078, 2, -65531, 131078, 2, -131066, 131078, 2, -65530, 131078, 2, -131065, 131078, 2, -65529, 131078, 2, -131064, 131078, 2, -65528, 131078, 2, -131063, 131078, 2, -65527, 131078, 2, -131062, 131078, 2, -65526, 131078, 2, -131061, 131078, 2, -65525, 131078, 2, -131060, 131078, 2, -65524, 131078, 2, -131059, 131078, 2, -65523, 131078, 2, -131058, 131078, 2, -65522, 131078, 2, -131057, 131078, 2, -65521, 131078, 2, -131056, 131078, 2, -65520, 131078, 2, -131055, 131078, 2, -65519, 131078, 2, -131054, 131078, 2, -65518, 131078, 2, -131053, 131078, 2, -65517, 131078, 2, -131052, 131078, 2, -65516, 131078, 2, -131051, 131078, 2, -65515, 131078, 2, -131050, 131078, 2, -65514, 131078, 2, -131049, 131078, 2, -65513, 131078, 2, -131048, 131078, 2, -65512, 131078, 2, -131047, 131078, 2, -65511, 131078, 2, -131046, 131078, 2, -65510, 131078, 2, -131045, 131078, 2, -65509, 131078, 2, -131044, 131078, 2, -65508, 131078, 2, -131043, 131078, 2, -65507, 131078, 2, -131042, 131078, 2, -65506, 131078, 2, -131041, 131078, 2, -65505, 131078, 2, -131040, 131078, 2, -65504, 131078, 2, -65540, 131078, 2, -4, 131078, 2, -65539, 131078, 2, -3, 131078, 2, -65538, 131078, 2, -2, 131078, 2)

[node name="Pbullets" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="Muros" type="Node" parent="."]

[node name="leftWall" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(576, 1792)
rotation = 1.5708
scale = Vector2(8, 2)
length_in_cells = 4

[node name="leftWall2" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(64, 832)
rotation = 1.5708
scale = Vector2(18, 2)
length_in_cells = 8

[node name="leftWall3" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(704, 384)
rotation = 1.5708
scale = Vector2(4, 2)
length_in_cells = 2

[node name="cellWall" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(1856, 2112)
scale = Vector2(42, 2)
length_in_cells = 19

[node name="plataformWall" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(320, 1472)
scale = Vector2(10, 2)
length_in_cells = 4

[node name="plataformWall4" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(1600, 960)
scale = Vector2(6, 2)
length_in_cells = 3

[node name="plataformWall5" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(2240, 960)
scale = Vector2(6, 2)
length_in_cells = 3

[node name="plataformWall6" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(3456, 1728)
scale = Vector2(12, 2)
length_in_cells = 6

[node name="plataformWall7" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(1280, 1472)
scale = Vector2(12, 2)
length_in_cells = 6

[node name="plataformWall8" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(2624, 1472)
scale = Vector2(14, 2)
length_in_cells = 7

[node name="plataformWall9" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(1792, 192)
scale = Vector2(24, 2)
length_in_cells = 10

[node name="leftWall7" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(1088, 384)
rotation = 1.5708
scale = Vector2(4, 2)
length_in_cells = 2

[node name="leftWall8" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(3136, 1920)
rotation = 1.5708
scale = Vector2(4, 2)
length_in_cells = 2

[node name="leftWall9" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(2496, 384)
rotation = 1.5708
scale = Vector2(4, 2)
length_in_cells = 2

[node name="leftWall10" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(2880, 384)
rotation = 1.5708
scale = Vector2(4, 2)
length_in_cells = 2

[node name="plataformWall10" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(3456, 960)
scale = Vector2(12, 2)
length_in_cells = 5

[node name="plataformWall11" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(2688, 576)
scale = Vector2(8, 2)
length_in_cells = 3

[node name="plataformWall12" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(896, 576)
scale = Vector2(8, 2)
length_in_cells = 4

[node name="plataformWall13" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(384, 192)
scale = Vector2(12, 2)
length_in_cells = 4

[node name="plataformWall14" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(3328, 192)
scale = Vector2(16, 2)
length_in_cells = 6

[node name="leftWall4" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(3776, 576)
rotation = 1.5708
scale = Vector2(10, 2)
length_in_cells = 5

[node name="leftWall5" parent="Muros" instance=ExtResource("5_04k04")]
position = Vector2(3776, 1344)
rotation = 1.5708
scale = Vector2(10, 2)
length_in_cells = 5

[node name="Spawner" type="Node2D" parent="."]

[node name="1stSpawner" type="Marker2D" parent="Spawner"]
position = Vector2(1232, 1304)

[node name="2ndSpawner" type="Marker2D" parent="Spawner"]
position = Vector2(2624, 1312)

[node name="3rdSpawner" type="Marker2D" parent="Spawner"]
position = Vector2(1592, 800)

[node name="4thSpawn" type="Marker2D" parent="Spawner"]
position = Vector2(2232, 776)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/game/characters/character.tscn")
spawn_path = NodePath("../Players")
spawn_limit = 4

[node name="MultiplayerSpawner2" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/game/portals/portal_bullet.tscn")
spawn_path = NodePath("../Pbullets")
spawn_limit = 4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1920, 1180)
zoom = Vector2(0.28, 0.28)

[node name="HealthBars" type="Node2D" parent="."]
script = ExtResource("6_gppcr")

[node name="healthbar1" parent="HealthBars" instance=ExtResource("7_gyues")]

[node name="healthbar2" parent="HealthBars" instance=ExtResource("7_gyues")]

[node name="healthbar3" parent="HealthBars" instance=ExtResource("7_gyues")]

[node name="healthbar4" parent="HealthBars" instance=ExtResource("7_gyues")]

[node name="Props" type="Node2D" parent="."]

[node name="prop" parent="." instance=ExtResource("8_hagta")]
position = Vector2(333, 498)
prop_mass = 5.0

[node name="prop2" parent="." instance=ExtResource("8_hagta")]
position = Vector2(3539, 488)
prop_mass = 5.0

[node name="prop3" parent="." instance=ExtResource("8_hagta")]
position = Vector2(3432, 1568)
prop_mass = 5.0

[node name="prop4" parent="." instance=ExtResource("8_hagta")]
position = Vector2(1928, 1936)
prop_mass = 5.0

[node name="EndLabel" type="MarginContainer" parent="."]
visible = false
offset_right = 3852.0
offset_bottom = 2286.0
theme = ExtResource("9_luofo")

[node name="PanelContainer" type="PanelContainer" parent="EndLabel"]
custom_minimum_size = Vector2(1000, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="EndLabel/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 300
text = "GAME!!"
horizontal_alignment = 1
vertical_alignment = 1
